<resources>
    <string name="app_name">JERLCalculadora</string>
    <string name="btn">1</string>
    <string name="btn2">2</string>
    <string name="btn3">3</string>
    <string name="btn4">4</string>
    <string name="btn5">5</string>
    <string name="btn6">6</string>
    <string name="btn7">7</string>
    <string name="btn8">8</string>
    <string name="btn9">9</string>
    <string name="btn0">0</string>
    <string name="btnMas">+</string>
    <string name="btnMenos">-</string>
    <string name="btnX">x</string>
    <string name="btnIgual">=</string>
    <string name="btnDivide">÷</string>
    <string name="Clear">AC</string>
    <string name="Dot">.</string>
    <string name="Pop">←</string>
    <string name="Parenthesis">( )</string>
    <string name="Percentage">%</string>

</resources>