<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/Pantalla"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.35"
            android:background="@color/pantalla"
            android:text="0"
            android:textColor="@color/textoBlanco"
            android:textSize="42sp"
            android:gravity="end|center_vertical"
            android:padding="24dp"
            android:letterSpacing="0.05"
            android:elevation="6dp"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:background="@color/pantalla"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnClear"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/btn_operador"
                android:text="@string/Clear"
                android:textColor="@color/textoBlanco"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btnParen"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/btn_operador"
                android:text="@string/Parenthesis"
                android:textColor="@color/textoBlanco"
                android:textSize="30sp" />


            <Button
                android:id="@+id/btnPercentage"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/btn_operador"
                android:text="@string/Percentage"
                android:textColor="@color/textoBlanco"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btnDivide"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/btn_operador"
                android:text="@string/btnDivide"
                android:textColor="@color/textoBlanco"
                android:textSize="30sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:background="@color/pantalla"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn7"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/btn_numero"
                android:text="@string/btn7"
                android:textColor="@color/textoBlanco"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn8"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/btn_numero"
                android:text="@string/btn8"
                android:textColor="@color/textoBlanco"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn9"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/btn_numero"
                android:layout_margin="4dp"
                android:text="@string/btn9"
                android:textColor="@color/textoBlanco"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btnX"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="4dp"

                android:layout_weight="1"
                android:background="@drawable/btn_operador"
                android:text="@string/btnX"
                android:textColor="@color/textoBlanco"
                android:textSize="30sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:background="@color/pantalla"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/btn_numero"
                android:text="@string/btn4"
                android:textColor="@color/textoBlanco"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn5"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/btn_numero"
                android:layout_margin="4dp"
                android:text="@string/btn5"
                android:textColor="@color/textoBlanco"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn6"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/btn_numero"
                android:text="@string/btn6"
                android:textColor="@color/textoBlanco"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btnLess"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/btn_operador"
                android:text="@string/btnMenos"
                android:textColor="@color/textoBlanco"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:background="@color/pantalla"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/btn_numero"
                android:text="@string/btn"
                android:textColor="@color/textoBlanco"
                android:textSize="30sp"
                tools:ignore="NestedWeights" />

            <Button
                android:id="@+id/btn2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/btn_numero"
                android:text="@string/btn2"
                android:textColor="@color/textoBlanco"
                android:textSize="30sp"
                tools:ignore="NestedWeights" />

            <Button
                android:id="@+id/btn3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/btn_numero"
                android:text="@string/btn3"
                android:textColor="@color/textoBlanco"
                android:textSize="30sp"
                tools:ignore="NestedWeights" />

            <Button
                android:id="@+id/btnMas"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/btn_operador"
                android:text="@string/btnMas"
                android:textColor="@color/textoBlanco"
                android:textSize="28sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:background="@color/pantalla"
            android:orientation="horizontal">


            <Button
                android:id="@+id/btn0"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/btn_numero"
                android:text="@string/btn0"
                android:textColor="@color/textoBlanco"
                android:textSize="30sp"
                tools:ignore="NestedWeights" />

            <Button
                android:id="@+id/Dot"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/btn_numero"
                android:text="@string/Dot"
                android:textColor="@color/textoBlanco"
                android:textSize="28sp" />

            <Button
                android:id="@+id/Pop"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/btn_operador"
                android:text="@string/Pop"
                android:textColor="@color/textoBlanco"
                android:textSize="26sp" />

            <Button
                android:id="@+id/btnEqual"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/btn_igual"
                android:backgroundTint="#CA4A1E"
                android:text="@string/btnIgual"
                android:textColor="@color/textoBlanco"
                android:textSize="30sp" />

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>